Apparently works-for-me is a crappy excuse.

--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -15,8 +15,9 @@ jobs:
 
       - name: Set environment
         run: echo "::set-env name=TAG::${GITHUB_REF#refs/tags/}"
+
       - name: Create, or update the short-name branch
-        if: !startsWith(env.TAG, 'v0.0')
+        if: startsWith(env.TAG, 'v0.0') != true
         run: |
           SHORT="$(echo "${TAG#v}" | cut -d. -f-2)"
 
